--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
-  --blue: #1e90ff;
-  --hover-blue: #137ae0;
+  --blue: #3751ff;
+  --hover-blue: #0f67be;
   --white: #ffffff;
   --light-grey: rgb(224, 224, 224);
 
