--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@
 
   --b-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+@media print {
+  html,
+  body {
+    height: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden;
+  }
+}
